# music_review_annotation

./: ID_to_URL_table.csv  LICENSE  README.md
annotation_guidelines/: README.md
annotations/: README.md  annotations_50reviews_for_IAA.csv  annotations_all.csv
scripts/0_scraping_ebravo/: README.md  crawl_ebravo.py  pyproject.toml
scripts/1_preprocessing_ebravo/: README.md  pyproject.toml  sentencize_ebravo.py
