[tool.poetry]
name = "scraping"
version = "0.1.0"
description = ""
authors = ["Hayate Wakasaki <56909117+hw8829@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
pymongo = "^3.12.0"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
ipython = "^7.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
