[tool.poetry]
name = "web-review-processing"
version = "0.1.0"
description = ""
authors = ["Hayate Wakasaki <56909117+hw8829@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
ja-sentence-segmenter = "^0.0.2"
ipython = "^7.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
